Add TM marks to first use of OpenJDK & Java
Signed-off-by: Dan Heidinga <daniel_heidinga@ca.ibm.com>

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- INTRO -->
     <div id="intro-block">
-      <h1>Boost your Java application performance</h1>
+      <h1>Boost your Java&trade; application performance</h1>
       <p>
 <!--
           <img src="./assets/openj9-hex.png" class="product-logo" />
@@ -59,7 +59,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </p>
       <p style="font-size:1.2rem;">
         Eclipse OpenJ9 is optimized to run Java applications cost-effectively in the cloud.<br/>
-        Want an OpenJDK build that contains an enterprise grade, open source, Java virtual machine?<br/>
+        Want an OpenJDK&trade; build that contains an enterprise grade, open source, Java virtual machine?<br/>
         Grab a pre-built binary and try it for yourself...
       </p> 
       <a class="button external-button" style="width:17em; margin-top:1rem;" href="https://adoptopenjdk.net/releases.html?variant=openjdk8-openj9">Download Now
