--- a/oj9_build.html
+++ b/oj9_build.html
@@ -59,7 +59,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
     <div class="section-content" style="padding-bottom:0;" id="build">
-      <h1 style="padding-bottom: 10px;">Build your own OpenJDK</h1>
+      <h1 style="padding-bottom: 10px;">Build your own OpenJDK&trade;</h1>
 
     &nbsp; &nbsp;
     <input id="tab8" type="radio" name="tabs" checked>
@@ -173,7 +173,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <p>Now you're ready to build OpenJDK with OpenJ9:
           </p>
           <pre><code>make all</code></pre>
-          <p>Two Java builds are produced: a full developer kit (<code>jdk</code>) and a runtime environment (<code>jre</code>):
+          <p>Two Java&trade; builds are produced: a full developer kit (<code>jdk</code>) and a runtime environment (<code>jre</code>):
           </p>
 <!-- set version x2 -->
           <ul>
