--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -54,13 +54,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h1>Frequently asked questions</h1>
 
       <div class="f-section-item">
-        <span class="intro-text">This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK ecosystem.<br><br>If you can't find the answer you're looking for, ask a question in our <a href="openj9.slack.com">Slack workspace</a>, which you can join <a href="oj9_joinslack.html">here</a>.</span>
+        <span class="intro-text">This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK&trade; ecosystem.<br><br>If you can't find the answer you're looking for, ask a question in our <a href="openj9.slack.com">Slack workspace</a>, which you can join <a href="oj9_joinslack.html">here</a>.</span>
       </div>
 
       <div class="section-item-faq">
         <details id="replacement">
           <summary>Is Eclipse OpenJ9 a replacement for OpenJDK?</summary>
-          <p>No. Eclipse OpenJ9 is a Java virtual machine (JVM), the engine that runs Java applications, whereas OpenJDK is a complete development kit that contains other components, like the Java class libraries, as well as a JVM. By default, OpenJDK builds with a JVM called Hotspot. Put simply, OpenJ9 is an alternative JVM that you can include as part of an OpenJDK binary.
+          <p>No. Eclipse OpenJ9 is a Java&trade; virtual machine (JVM), the engine that runs Java applications, whereas OpenJDK is a complete development kit that contains other components, like the Java class libraries, as well as a JVM. By default, OpenJDK builds with a JVM called Hotspot. Put simply, OpenJ9 is an alternative JVM that you can include as part of an OpenJDK binary.
           </p>
         </details>
       </div>
