--- a/oj9_performance.html
+++ b/oj9_performance.html
@@ -53,7 +53,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       <div class="f-section-item">
         <div class="f-content-container">
-          <p class="intro-text" style="padding:2rem 0 2rem 0;">Benchmark testing demonstrates significantly better performance for both OpenJDK 8 and OpenJDK 9 when using Eclipse OpenJ9, than with Hotspot.
+          <p class="intro-text" style="padding:2rem 0 2rem 0;">Benchmark testing demonstrates significantly better performance for both OpenJDK&trade; 8 and OpenJDK 9 when using Eclipse OpenJ9, than with Hotspot.
           </p>
         </div>
       </div>
@@ -75,7 +75,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <li><a href="#g5">Significantly faster ramp up time in a CPU constrained environment</a></li>
           </ul>
           </p>
-          <p style="background-color:#eee; border:1 px black; margin-bottom:1rem; padding: 1rem; font-size: .8rem; line-height: 1.2rem;"><strong>Note:</strong> For the evaluation of OpenJDK v8, we used the Daytrader 7 benchmark (download from <a href="https://github.com/wasdev/sample.daytrader7">GitHub</a>). Although Daytrader 3, which we used previously, is an application conforming to the Java EE 6 specification, Daytrader 7 has been re-designed to use the latest Java EE 7 features, including the new WebSockets specification. Thus, we feel that the new benchmark is more representative of the types of Java applications and technologies in use today and therefore more relevant to existing Java users.
+          <p style="background-color:#eee; border:1 px black; margin-bottom:1rem; padding: 1rem; font-size: .8rem; line-height: 1.2rem;"><strong>Note:</strong> For the evaluation of OpenJDK v8, we used the Daytrader 7 benchmark (download from <a href="https://github.com/wasdev/sample.daytrader7">GitHub</a>). Although Daytrader 3, which we used previously, is an application conforming to the Java&trade; EE 6 specification, Daytrader 7 has been re-designed to use the latest Java EE 7 features, including the new WebSockets specification. Thus, we feel that the new benchmark is more representative of the types of Java applications and technologies in use today and therefore more relevant to existing Java users.
           </p>
           <p>While the specific levels of performance shown in these tests might change from benchmark to benchmark or even from machine to machine, the same trends are expected to hold for a large class of server-type applications.
           </p>
