--- a/oj9_resources.html
+++ b/oj9_resources.html
@@ -68,10 +68,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               Eclipse OpenJ9 verbose JIT logs</a></i> by Mark Stoodley</li>
 		
 			<li><i><a href="https://www.eclipse.org/community/eclipse_newsletter/2018/april/openj9.php" target="_blank">
-              Eclipse OpenJ9 - not just any Java Virtual Machine</a></i> by Dan Heidinga and Sue Chaplain</li>
+              Eclipse OpenJ9 - not just any Java&trade; Virtual Machine</a></i> by Dan Heidinga and Sue Chaplain</li>
 			  
             <li><i><a href="https://github.com/eclipse/openj9-website/blob/master/benchmark/daytrader7.md" target="_blank">
-              OpenJDK 8 performance with Eclipse OpenJ9</a></i> by Vijay Sundaresan and Marius Pirvu<br/>
+              OpenJDK&trade; 8 performance with Eclipse OpenJ9</a></i> by Vijay Sundaresan and Marius Pirvu<br/>
               "Benchmark testing demonstrates significantly better performance for OpenJDK 8 when using the Eclipse OpenJ9 VM, than with the Hotspot VM - just as for OpenJDK 9."</li>
 
             <li><i><a href="https://www.slideshare.net/MarkStoodley/javaone-2017-mark-stoodley-open-sourcing-ibm-j9-jvm" target="_blank">
