--- a/oj9_whatsnew.html
+++ b/oj9_whatsnew.html
@@ -116,7 +116,7 @@ data-show-count="false">Tweet</a>
 
       <div class="f-section-item" id="perf8">
         <div class="f-content-container">
-          <h3>New performance tests with OpenJDK 8</h3>
+          <h3>New performance tests with OpenJDK&trade; 8</h3>
           <p><i>19th March 2018</i></p>
           <p>We've already demonstrated the performance advantages of OpenJDK 9 with OpenJ9, but you might be wondering what you get with OpenJDK 8. So we have taken the opportunity to re-evaluate the performance of OpenJ9 when running OpenJDK 8, using the same metrics as we used when we tested OpenJDK 9.
           </p>
@@ -209,7 +209,7 @@ data-show-count="false">Tweet</a>
 
       <div class="f-section-item" id="openjdk8_ga">
         <div class="f-content-container">
-          <h3>Eclipse OpenJ9 for Java 8</h3>
+          <h3>Eclipse OpenJ9 for Java&trade; 8</h3>
           <p><i>22nd November 2017</i></p>
           <p>Over the last couple of months, we've been talking about OpenJ9 with pretty much everyone who'd listen to us. People have told us that OpenJ9 for Java 9 is a great achievement, but many users and developers aren't ready to step up to Java 9 just yet. The most popular request we've heard is to combine Eclipse OpenJ9 with a Java 8 JDK so that it can be used in day-to-day development and production environments.
           </p>
