--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         Want an OpenJDK&trade; build that contains an enterprise grade, open source, Java virtual machine?<br/>
         Grab a pre-built binary and try it for yourself...
       </p> 
-      <a class="button external-button" style="width:17em; margin-top:1rem;" href="https://adoptopenjdk.net/nightly.html?variant=openjdk8&jvmVariant=openj9">Download Now
+      <a class="button external-button" style="width:17em; margin-top:1rem;" href="https://adoptopenjdk.net/releases.html?variant=openjdk8&jvmVariant=openj9">Download Now
         <i class="fa fa-download" aria-hidden="true"></i></a>
 		
       <h2 id="performance" style="color: #65c1bd;">
@@ -149,7 +149,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </p>
         </div>
         <div class="f-button-container">
-          <a class="button external-button" href="https://adoptopenjdk.net/nightly.html?variant=openjdk8&jvmVariant=openj9">Download it
+          <a class="button external-button" href="https://adoptopenjdk.net/releases.html?variant=openjdk8&jvmVariant=openj9">Download it
             <i class="fa fa-download" aria-hidden="true"></i></a>
         </div>
       </div>
@@ -157,7 +157,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="f-section-item">
         <div class="f-content-container">
           <p><span class="first-word">Build your own</span>
-          If you are familiar with building OpenJDK, you might want to build it with OpenJ9 yourself. For a deeper dive, read the build instructions, which cover all the steps to build a version 8 or version 9 OpenJDK with OpenJ9 and how to test your binary.
+          If you are familiar with building OpenJDK, you might want to build it with OpenJ9 yourself. For a deeper dive, read the build instructions, which cover all the steps to build an OpenJDK with OpenJ9 and how to test your binary.
           </p>
         </div>
         <div class="f-button-container">
@@ -170,9 +170,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="f-content-container">
           <p><span class="first-word">Tune it</span>
           OpenJ9 optimizes your Java application out-of-the-box without needing a complicated set of command line options. However, further tuning is possible to improve your application's performance. For example, if your application has an extremely large heap, you might choose a different garbage collection policy to improve memory management. Alternatively, you might want to exploit specific hardware features such as a graphics processing unit (GPU).
-          </p>
-          <p>To learn more about tuning OpenJ9 for your application runtime environment, read the existing user documentation in the IBM Knowledge Center. Documentation to support OpenJ9 at the Eclipse foundation is a work in progress. Watch this space!
-          </p>
+          To learn more about tuning OpenJ9 for your application runtime environment, read the docs.</p>
         </div>
         <div class="f-button-container">
           <a class="button external-button" href="https://www.eclipse.org/openj9/docs/" target="_blank">Read the docs
@@ -183,7 +181,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="f-section-item">
         <div class="f-content-container">
           <p><span class="first-word">Ask questions</span>
-          If you get stuck trying to do something, <a href="oj9_joinslack.html">join our Slack workspace</a> where you can get some help from the community. Our developers also monitor <code class="stack">#OpenJ9</code> questions on Stack Overflow. For very general questions about OpenJ9 and how it fits into the OpenJDK ecosystem, we've created an <a href="oj9_faq.html">FAQ</a>.
+          If you get stuck trying to do something, join our Slack workspace where you can get some help from the community. Our developers also monitor <code class="stack">#OpenJ9</code> questions on Stack Overflow. For very general questions about OpenJ9, what we support, and how it fits into the OpenJDK ecosystem, we've created an <a href="oj9_faq.html">FAQ</a>.
           </p>
         </div>
         <div class="f-button-container">
@@ -219,7 +217,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
      <div class="f-section-item">
         <div class="f-content-container">
           <p><span class="first-word">Make suggestions</span>
-          If you are using OpenJ9 within a Java runtime environment and you have ideas for improvements, share them in our <a href="https://openj9.slack.com">slack workspace</a> (Join <a href="oj9_joinslack.html">here</a>). We'd love to hear from you.
+          If you are using OpenJ9 within a Java runtime environment and you have ideas for improvements, share them in our slack workspace (Join <a href="oj9_joinslack.html">here</a>). We'd love to hear from you.
           </p>
         </div>
       </div>
@@ -228,7 +226,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="f-content-container">
           <p><span class="first-word">Contribute</span>
           If you are interested in contributing to the development of this open-source project, check out the <a href="https://github.com/eclipse/openj9/blob/master/CONTRIBUTING.md">contribution guide</a> in our GitHub repository.
-		  If you want to find out more about how we work, why not come along to one of our <a href="oj9_whatsnew.html#hangout">hangouts</a>.
+		  If you want to find out more about how we work, why not come along to one of our <a href="oj9_whatsnew.html#hangout">community calls</a>.
 		  You can also find out more about the project, including release plans, at our <a href="https://projects.eclipse.org/projects/technology.openj9">Eclipse Foundation project page</a>.
           </p>
         </div>
