--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -104,7 +104,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       <div class="section-item-faq">
         <details id="support">
-          <summary>Which system environments is Eclipse OpenJ9 supported on?</summary>
+          <summary>Which OpenJDK versions and which platforms is Eclipse OpenJ9 supported on?</summary>
           <p>You can find a full support statement in our <a href="https://www.eclipse.org/openj9/docs/openj9_support/" target="_blank">user documentation</a>.
           </p>
         </details>
