Add links to Low memory footprint, Faster startup, High throughput titles
Link to the appropriate sections of oj9_performance.html so people can easily
find the data backing up these claims.

Signed-off-by: Mark Stoodley <mstoodle@ca.ibm.com>

--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!--
           <img src="./assets/openj9-hex.png" class="product-logo" />
 -->
-      <span style="font-size:1.4rem;color: #65c1bd;">Low memory footprint<br/>Fast startup time<br/>High application throughput</span>
+      <span style="font-size:1.4rem;color: #65c1bd;">
+         <a href="./oj9_performance.html#g1">Low memory footprint</a>
+         <br/>
+         <a href="./oj9_performance.html#g3">Fast startup time</a>
+         <br/>
+         <a href="./oj9_performance.html#g4">High application throughput</a>
+      </span>
       </p>
       <p style="font-size:1.2rem;">
         Eclipse OpenJ9 is optimized to run Java applications cost-effectively in the cloud.<br/>
