Add a ramp-up claim and link to the data
Add "Smoother ramp-up in the cloud" to the 3 main performance claims,
and link to the ramp-up section of oj9_performance.html .

Signed-off-by: Mark Stoodley <mstoodle@ca.ibm.com>

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
          <a href="./oj9_performance.html#g3">Fast startup time</a>
          <br/>
          <a href="./oj9_performance.html#g4">High application throughput</a>
+         <br/>
+         <a href="./oj9_performance.html#g5">Smoother ramp-up in the cloud</a>
       </span>
       </p>
       <p style="font-size:1.2rem;">
