Link main cloud optimization claim to the performance data
Again, just to make it easier for people to get to the data that
backs up the claim.

Signed-off-by: Mark Stoodley <mstoodle@ca.ibm.com>

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </span>
       </p>
       <p style="font-size:1.2rem;">
-        Eclipse OpenJ9 is optimized to run Java applications cost-effectively in the cloud.<br/>
+        <a href="./oj9_performance.html">Eclipse OpenJ9 is optimized to run Java applications cost-effectively in the cloud.</a><br/>
         Want an OpenJDK&trade; build that contains an enterprise grade, open source, Java virtual machine?<br/>
         Grab a pre-built binary and try it for yourself...
       </p> 
