Link the "Try it on OpenJDK with Eclipse OpenJ9" to downloads page
Make it as easy as possible for people to get to the right downloads page.

Signed-off-by: Mark Stoodley <mstoodle@ca.ibm.com>

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <i class="fa fa-download" aria-hidden="true"></i></a>
 		
       <h2 id="performance" style="color: #65c1bd;">
-        Give your Java application a thrill<br/>
-        Run it on OpenJDK with Eclipse OpenJ9
+        <a href="https://adoptopenjdk.net/nightly.html?variant=openjdk8&jvmVariant=openj9">Give your Java application a thrill<br/>
+        Run it on OpenJDK with Eclipse OpenJ9</a>
       </h2> 
 
 <!--
