Update What's new - JDK11 builds are available
Post first put out before the Adopt builds were
on the website. Update to change the text and point
directly to the page.

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/oj9_whatsnew.html
+++ b/oj9_whatsnew.html
@@ -83,7 +83,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h3>Eclipse OpenJ9 version 0.10.0 released</h3>
           <p><i>3rd October 2018</i></p>
           <p>Eclipse OpenJ9 version 0.10.0 adds support for OpenJDK version 11. All the testing we've done so far proves
-		  that builds are compatible with OpenJDK 11 and we expect builds to be available at  <a href="https://adoptopenjdk.net" target="_blank">AdoptOpenJDK</a> very soon.</p>
+		  that builds are compatible with OpenJDK 11 and builds are now available at  <a href="https://adoptopenjdk.net/archive.html?variant=openjdk11&jvmVariant=openj9" target="_blank">AdoptOpenJDK</a>.</p>
 		  
 		  <p>To learn more about our release strategy, plus our supported architectures and operating systems, 
 		  see <a href="https://www.eclipse.org/openj9/docs/openj9_support/index.html">Supported environments</a>.</p>
