Tweak the tweet to insert Eclipse #OpenJ9
Update the tweet for the 0.10.0 release
to prepend with Eclipse #OpenJ9. It has
been pointed out that the tweet otherwise
is not immediately obvious what it is about.

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/oj9_whatsnew.html
+++ b/oj9_whatsnew.html
@@ -108,7 +108,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 url=https%3A%2F%2Fwww.eclipse.org%2Fopenj9%2Foj9_whatsnew.html%23openj90100&
 via=openj9&
 hashtags=openj9,java&
-text=V0.10.0%20released;%20OpenJDK%20v11%20builds%20now%20available."
+text=Eclipse%20#OpenJ9%20V0.10.0%20released;%20OpenJDK%20v11%20builds%20now%20available."
 class="twitter-share-button"
 data-show-count="false">Tweet</a>
         </div>
