Fix stack depth option
Stack depth option was not enabling/disabling correctly.

--- a/tools/xtrace_option_builder.html
+++ b/tools/xtrace_option_builder.html
@@ -488,7 +488,7 @@ function processChange(option) {
 	}
 
 	// Enable the stack depth field if a jstacktrace trigger action is selected
-	if (isTracepointJStackTraceActionSelected() || isMethodJStackTraceActionSelected) {
+	if (isTracepointJStackTraceActionSelected() || isMethodJStackTraceActionSelected()) {
 		enableInput(document.getElementById("stack_depth"));
 	} else {
 		disableInput(document.getElementById("stack_depth"));
