Fix Copy button
"Copy option" button was not working properly if the result contained HTML reserved characters - e.g. for <init> and <clinit> methods (constructors)

--- a/tools/xdump_option_builder.html
+++ b/tools/xdump_option_builder.html
@@ -939,7 +939,7 @@ function copyTextToClipboard(element) {
 	// Create a temporary element and store the target element's text in it
 	// (while stripping out any HTML tags)
 	var tempElement = document.createElement("p");
-	tempElement.innerHTML = element.innerText;
+	tempElement.innerText = element.innerText;
 
 	// Append temporary element to the DOM so we can copy its contents
 	document.body.appendChild(tempElement);
