--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -57,7 +57,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h1>Frequently asked questions</h1>
 
       <div class="f-section-item">
-        <span class="intro-text">This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK&trade; ecosystem.<br><br>If you can't find the answer you're looking for, ask a question in our <a href="openj9.slack.com">Slack workspace</a>, which you can join <a href="oj9_joinslack.html">here</a>.</span>
+        <span class="intro-text">This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK&trade; ecosystem.<br><br>If you can't find the answer you're looking for, ask a question in our <a href="openj9.slack.com">Slack workspace</a> (<a href="https://join.slack.com/t/openj9/shared_invite/enQtNDU4MDI4Mjk0MTk2LWM2MjliMTQ4NWM5YjMwNTViOTgzMzM2ZDhlOWJmZTc1MjhmYmRjMDg2NDljNGM0YTAwOWRiZDE0YzI0NjgyOWI" target="_blank">request an invite</a>).</span>
       </div>
 
       <div class="section-item-faq">
@@ -115,7 +115,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <summary>How can I discuss ideas and provide feedback to this community?</summary>
           <p>There are a number of ways that you can engage with the OpenJ9 community:
 		   <ul>
-			<li>Join our <a href="https://openj9.slack.com/messages/C8312LCV9/" target="_blank">OpenJ9 slack workspace</a> where you can collaborate directly with developers and other contributors on the project. To join slack, <a href="https://www.eclipse.org/openj9/oj9_joinslack.html" target="_blank">request an invitation.</a></li>
+			<li>Join our <a href="https://openj9.slack.com/messages/C8312LCV9/" target="_blank">OpenJ9 slack workspace</a> where you can collaborate directly with developers and other contributors on the project. To join slack, <a href="https://join.slack.com/t/openj9/shared_invite/enQtNDU4MDI4Mjk0MTk2LWM2MjliMTQ4NWM5YjMwNTViOTgzMzM2ZDhlOWJmZTc1MjhmYmRjMDg2NDljNGM0YTAwOWRiZDE0YzI0NjgyOWI" target="_blank">request an invitation.</a></li>
 			<li>Join the <a href="https://dev.eclipse.org/mailman/listinfo/openj9-dev" target="_blank">Eclipse mailing list</a> and post a message to our development community.</li>
 			<li>Come along to our regular hangouts, where you can speak to OpenJ9 developers directly, ask questions, and share your experiences. Schedules and agendas for hangouts are posted in the #planning channel of the OpenJ9 slack workspace.</li>
 			<li>Create an issue in our <a href="https://github.com/eclipse/openj9/issues" target="_blank">OpenJ9 GitHub repository</a>.</li>
