Add support FAQ and tidy up What's new page
To address suggestion in #142, added a new FAQ
to link users to the migration topic in the user
guide.

To address #137 (backticks) and add missing icons for
external links, did some tidy up on the Whats new page.

Closes: #142
Closes: #137

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -109,6 +109,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </p>
         </details>
       </div>
+
+      <div class="section-item-faq">
+        <details id="migration">
+          <summary>How easy is it to migrate to OpenJDK with Eclipse OpenJ9?</summary>
+          <p>Most Java applications should run without changing anything. However, if you are using a runtime environment that embeds the HotSpot VM and you set a lot of command-line options when you start your Java application, read the topic <a href="https://www.eclipse.org/openj9/docs/cmdline_migration/" target="_blank">Migrating to OpenJ9</a>, which provides a mapping of HotSpot to OpenJ9 options.
+          </p>
+        </details>
+      </div>
 	  
 	  <div class="section-item-faq">
         <details id="engage">
